--- a/docker/pom.xml
+++ b/docker/pom.xml
@@ -34,7 +34,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>2.0.0</version>
+                <version>2.1.0</version>
                 <executions>
                     <execution>
                         <id>make-docker-image</id>
@@ -54,6 +54,8 @@
                                 <tar>target/pwm-docker-image-${project.version}.tar</tar>
                             </outputPaths>
                             <container>
+                                <creationTime>${git.commit.time}</creationTime>
+                                <filesModificationTime>${git.commit.time}</filesModificationTime>
                                 <entrypoint>
                                     <arg>/app/startup.sh</arg>
                                 </entrypoint>
