--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,9 @@
                         </goals>
                         <configuration>
                             <rules>
+                                <requireJavaVersion>
+                                    <version>[11,)</version>
+                                </requireJavaVersion>
                                 <requireMavenVersion>
                                     <version>${pwm.minimum.maven.version}</version>
                                 </requireMavenVersion>
