improve email connection management

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -282,7 +282,9 @@ pwNotify.maxLdapSearchSize=1000000
 pwNotify.maxSkipRerunWindowSeconds=86400
 queue.email.retryTimeoutMs=10000
 queue.email.maxCount=100000
-queue.email.maxThreads=0
+queue.email.maxThreads=10
+queue.email.maxItemsPerConnection=10000
+queue.email.maxSecondsPerConnection=120
 queue.sms.retryTimeoutMs=10000
 queue.sms.maxCount=100000
 queue.syslog.retryTimeoutMs=30000
