--- a/server/pom.xml
+++ b/server/pom.xml
@@ -221,7 +221,7 @@
         <dependency>
             <groupId>com.github.ldapchai</groupId>
             <artifactId>ldapchai</artifactId>
-            <version>0.8.0-SNAPSHOT</version>
+            <version>0.8.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.directory.api</groupId>
