--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,7 @@
                         </goals>
                         <configuration>
                             <rules>
+                                <banDuplicatePomDependencyVersions/>
                                 <requireJavaVersion>
                                     <version>[11,)</version>
                                 </requireJavaVersion>
