--- a/client/pom.xml
+++ b/client/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>pwm-client</artifactId>
     <packaging>jar</packaging>
 
+    <properties>
+        <node.version>v14.15.0</node.version>
+        <npm.version>6.14.8</npm.version>
+    </properties>
+
     <name>PWM Password Self Service: Angular Client JAR</name>
 
     <profiles>
@@ -75,12 +80,12 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.10.3</version>
+                <version>1.11.0</version>
                 <configuration>
-                    <nodeVersion>v14.15.0</nodeVersion>
-                    <npmVersion>6.14.8</npmVersion>
+                    <nodeVersion>${node.version}</nodeVersion>
+                    <npmVersion>${npm.version}</npmVersion>
                     <workingDirectory>angular/</workingDirectory>
-                    <installDirectory>target/node-executable</installDirectory>
+                    <installDirectory>${settings.localRepository}/frontend-maven-plugin/node-${node.version}</installDirectory>
                 </configuration>
                 <executions>
                     <execution>
