refactor pwmHttpClient and add implementation for Java11 HttpClient

--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -133,6 +133,7 @@ http.client.requestTimeoutMs=60000
 http.client.response.maxSize=20000000
 http.client.enableHostnameVerification=true
 http.client.promiscuous.wordlist.enable=true
+http.client.implementation=password.pwm.svc.httpclient.ApachePwmHttpClient
 http.header.server=@PwmAppName@
 http.header.sendContentLanguage=true
 http.header.sendXAmb=true
@@ -357,6 +358,7 @@ wordlist.import.maxCharsTransactions=10485760
 wordlist.import.lineComments=!#comment:
 wordlist.inspector.frequencySeconds=300
 wordlist.testMode=false
+wordlist.bucket.checkTimeWarningMs=1000
 ws.restClient.pwRule.haltOnError=true
 ws.restServer.signing.form.timeoutSeconds=120
 ws.restServer.statistics.defaultHistoryDays=7
