--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
         <spotbugs.skip>false</spotbugs.skip>
         <checkstyle.skip>false</checkstyle.skip>
         <skipTests>false</skipTests>
+        <owasp.skip>false</owasp.skip>
+        <jarsigner.skip>true</jarsigner.skip>
 
         <!-- git.commit.time is populated via git-commit-id-plugin and results in a (hopefully) reproducible maven build -->
         <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
@@ -75,6 +77,17 @@
                 <maven.javadoc.skip>false</maven.javadoc.skip>
             </properties>
         </profile>
+        <profile>
+            <id>enable-jarsigner</id>
+            <properties>
+                <jarsigner.skip>false</jarsigner.skip>
+            </properties>
+        </profile><profile>
+        <id>skip-owasp</id>
+        <properties>
+            <owasp.skip>true</owasp.skip>
+        </properties>
+    </profile>
     </profiles>
 
     <build>
@@ -139,6 +152,7 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <phase>package</phase>
                         <configuration>
                             <archive>
                                 <manifestEntries>
@@ -155,7 +169,7 @@
                                     <SCM-Git-Commit-Timestamp>${git.commit.time}</SCM-Git-Commit-Timestamp>
                                     <SCM-Git-Commit-Dirty>${git.dirty}</SCM-Git-Commit-Dirty>                                </manifestEntries>
                             </archive>
-                            <source>8</source>
+                            <source>${maven.compiler.release}</source>
                         </configuration>
                     </execution>
                 </executions>
@@ -356,6 +370,7 @@
                             <algorithms>
                                 <algorithm>SHA-1</algorithm>
                                 <algorithm>SHA-256</algorithm>
+                                <algorithm>SHA-512</algorithm>
                             </algorithms>
                             <failOnError>false</failOnError>
                         </configuration>
@@ -365,10 +380,11 @@
                     <!-- put your configurations here -->
                 </configuration>
             </plugin>
-            <plugin> <!-- checks owsp vulnerability database -->
+            <!-- checks owsp vulnerability database -->
+            <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>6.2.1</version>
+                <version>6.2.2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -376,6 +392,36 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <skip>${owasp.skip}</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jarsigner-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>sign</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <skip>${jarsigner.skip}</skip>
+                    <keystore>${jarsigner.keystore}</keystore>
+                    <alias>${jarsigner.alias}</alias>
+                    <storepass>${jarsigner.storepass}</storepass>
+                    <keypass>${jarsigner.keypass}</keypass>
+                    <verbose>false</verbose>
+                    <removeExistingSignatures>true</removeExistingSignatures>
+                    <includes>
+                        <include>*.jar</include>
+                        <include>*.war</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
