--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.pwm-project</groupId>
     <artifactId>pwm-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>PWM Password Self Service</name>
@@ -365,7 +365,7 @@
                         <goals>
                             <goal>artifacts</goal>
                         </goals>
-                        <phase>package</phase>
+                        <phase>verify</phase>
                         <configuration>
                             <algorithms>
                                 <algorithm>SHA-1</algorithm>
