--- a/onejar/pom.xml
+++ b/onejar/pom.xml
@@ -2,7 +2,7 @@
 
     <parent>
         <groupId>org.pwm-project</groupId>
-        <artifactId>pwm-parent</artifactId>
+        <artifactId>pwm</artifactId>
         <version>2.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -88,7 +88,7 @@
         -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>pwm</artifactId>
+            <artifactId>pwm-webapp</artifactId>
             <version>${project.version}</version>
             <type>war</type>
             <scope>provided</scope>
