--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.pwm-project</groupId>
-    <artifactId>pwm-parent</artifactId>
+    <artifactId>pwm</artifactId>
     <version>2.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
@@ -109,7 +109,7 @@
                             <property>project.root.basedir</property>
                             <project>
                                 <groupId>org.pwm-project</groupId>
-                                <artifactId>pwm-parent</artifactId>
+                                <artifactId>pwm</artifactId>
                             </project>
                         </configuration>
                     </execution>
@@ -243,6 +243,7 @@
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                     <release>${maven.compiler.release}</release>
+                    <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
@@ -254,7 +255,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>10.1</version>
+                        <version>10.2</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -396,7 +397,7 @@
             <plugin>
                 <groupId>org.owasp</groupId>
                 <artifactId>dependency-check-maven</artifactId>
-                <version>7.0.4</version>
+                <version>7.1.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -471,7 +472,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>4.5.0</version>
+            <version>4.5.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -483,7 +484,7 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock-jre8</artifactId>
-            <version>2.33.1</version>
+            <version>2.33.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
