--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.pwm-project</groupId>
     <artifactId>pwm-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>pom</packaging>
 
     <name>PWM Password Self Service</name>
@@ -40,6 +40,7 @@
 
         <!-- profile managed values -->
         <spotbugs.skip>false</spotbugs.skip>
+        <owasp.skip>false</owasp.skip>
         <checkstyle.skip>false</checkstyle.skip>
         <skipTests>false</skipTests>
 
@@ -68,6 +69,12 @@
             <id>skip-spotbugs</id>
             <properties>
                 <spotbugs.skip>true</spotbugs.skip>
+            </properties>
+        </profile>
+        <profile>
+            <id>skip-owasp</id>
+            <properties>
+                <spotbugs.owasp>true</spotbugs.owasp>
             </properties>
         </profile>
         <profile>
@@ -381,7 +388,9 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
+                            <skip>${owasp.skip}</skip>
                             <yarnAuditAnalyzerEnabled>false</yarnAuditAnalyzerEnabled>
+                            <nodeAnalyzerEnabled>false</nodeAnalyzerEnabled>
                         </configuration>
                     </execution>
                 </executions>
