--- a/client/package.json
+++ b/client/package.json
@@ -8,27 +8,28 @@
         "npm": ">=3.9"
     },
     "scripts": {
-        "build": "webpack --mode=production",
+        "build": "webpack --mode=development",
         "clean": "rimraf dist/",
         "test": "karma start test/karma.conf.js",
         "test-single-run": "karma start test/karma.conf.js --singleRun --no-auto-watch",
-        "start": "webpack-dev-server --mode=development --port 4000 --history-api-fallback --colors"
+        "start": "webpack-dev-server --mode=development --port 4000 --history-api-fallback --colors --progress"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@microfocus/ias-icons": "1.0.1",
-        "@microfocus/ng-ias": "1.0.0-alpha.2",
-        "@microfocus/ux-ias": "1.0.0-rc",
+        "@microfocus/ias-icons": "1.0.4",
+        "@microfocus/ng-ias": "1.0.1",
+        "@microfocus/ux-ias": "1.1.2",
         "@uirouter/angularjs": "1.0.15",
-        "angular": "1.6.9",
-        "angular-aria": "1.6.9",
-        "angular-sanitize": "1.6.9",
-        "angular-translate": "2.17.0",
+        "angular": "^1.7.9",
+        "angular-aria": "1.7.8",
+        "angular-sanitize": "1.7.9",
+        "angular-translate": "2.18.1",
+        "core-js": "3.5.0",
         "textangular": "1.5.16"
     },
     "devDependencies": {
-        "@types/angular": "1.6.43",
+        "@types/angular": "^1.8.1",
         "@types/angular-mocks": "1.5.11",
         "@types/angular-translate": "2.15.2",
         "@types/angular-ui-router": "1.1.40",
@@ -36,8 +37,8 @@
         "@types/node": "9.4.7",
         "angular-mocks": "1.6.9",
         "autoprefixer": "8.1.0",
-        "copy-webpack-plugin": "4.5.1",
-        "css-loader": "0.28.10",
+        "copy-webpack-plugin": "^5.1.1",
+        "css-loader": "^3.3.2",
         "file-loader": "1.1.11",
         "html-loader": "0.5.5",
         "html-webpack-plugin": "3.0.6",
@@ -45,10 +46,10 @@
         "imports-loader": "0.8.0",
         "jasmine": "3.2.0",
         "jasmine-core": "3.2.1",
-        "jshint": "2.9.5",
+        "jshint": "^2.13.0",
         "jshint-loader": "0.8.4",
         "json-loader": "0.5.7",
-        "karma": "3.1.1",
+        "karma": "^4.4.1",
         "karma-chrome-launcher": "2.2.0",
         "karma-jasmine": "1.1.2",
         "karma-jasmine-html-reporter": "1.3.1",
@@ -58,7 +59,7 @@
         "karma-webpack": "3.0.5",
         "moment": "2.21.0",
         "ngtemplate-loader": "2.0.1",
-        "node-sass": "4.7.2",
+        "node-sass": "^6.0.1",
         "phantomjs": "2.1.7",
         "phantomjs-prebuilt": "2.1.16",
         "postcss-loader": "2.1.1",
@@ -67,6 +68,7 @@
         "sass-loader": "6.0.7",
         "string-replace-loader": "2.1.1",
         "style-loader": "0.20.3",
+        "trim-newlines": ">=3.0.1",
         "ts-loader": "4.0.1",
         "ts-mockito": "2.3.1",
         "tslint": "5.9.1",
@@ -74,8 +76,8 @@
         "typescript": "2.7.2",
         "uglifyjs-webpack-plugin": "1.2.3",
         "url-loader": "1.0.1",
-        "webpack": "4.1.1",
-        "webpack-cli": "2.0.12",
+        "webpack": "^4.46.0",
+        "webpack-cli": "^3.3.10",
         "webpack-dev-server": "3.1.14",
         "webpack-merge": "4.1.2",
         "write-file-webpack-plugin": "4.2.0"
